k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciyex-ehr-ui
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ciyex-ehr-ui
          image: registry.apps-dev.in.hinisoft.com/ciyex-ehr-ui:v1.0.25
