k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ehr-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-dev.ciyex.org
      secretName: ciyex-ehr-ui-dev-tls
  rules:
    - host: app-dev.ciyex.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-ciyex-ehr-ui
                port:
                  number: 3000
